--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ html {
 
 body {
   width: 100vw;
+  /* height: 100vh; */
   overflow-x: hidden;
   background-color: #000;
   color: var(--color-dark-100);
@@ -92,7 +93,7 @@ body {
     @apply flex-center fixed top-0 left-0 z-50 min-h-[7vh] w-screen bg-black;
 
     nav {
-      @apply flex-between container mx-auto px-5 2xl:px-0;
+      @apply flex-between container mx-auto px-5 2xl:px-4;
 
       img {
         @apply cursor-pointer transition-all duration-300 ease-in-out hover:-translate-y-0.5;
@@ -113,7 +114,7 @@ body {
   }
 
   #hero {
-    @apply col-center mt-40 h-fit lg:mt-20 lg:h-[80vh] 2xl:mt-[7vh];
+    @apply col-center mt-40 h-fit lg:mt-20  2xl:mt-[7vh];
 
     div {
       @apply col-center relative z-10 lg:translate-y-16;
